prevented filtering controls from wrapping on small screen sizes

--- a/webroot/css/calendar_full.css
+++ b/webroot/css/calendar_full.css
@@ -15,13 +15,19 @@ body {
 	/* 	border: 1px solid red; */
 }
 
-#divMenu {
+.menuBar {
 	background-color: #e9e9e9;
 	width: 100%;
 	height: 24px;
 	float: none;
 	clear: both;
+	white-space: nowrap;
 	/* 	border: 1px solid red; */
+}
+
+.menuBarItem {
+	display: inline-block;
+    white-space: normal;
 }
 
 #menuShadow {
@@ -34,7 +40,6 @@ body {
 	box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
 	-webkit-box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
-	/* 	border: 1px solid red; */
 }
 
 #menuShadowCover {
@@ -44,7 +49,6 @@ body {
 	background-color: #fff;
 	width: 100%;
 	height: 34px;
-	/* 	border: 1px solid red; */
 }
 
 #divLogoText {
@@ -112,11 +116,14 @@ body {
 	float: right;
 	font-family: Tahoma, Geneva, sans-serif;
 	font-size: 12px;
+	white-space: nowrap;
 }
 
 .subMenuSection {
 	float: left;
 	height: 24px;
+	display: inline-block;
+    white-space: normal;
 }
 
 .subMenuSeparator {
@@ -126,7 +133,8 @@ body {
 	padding-left: 10px;
 	margin-left: 10px;
 	border-left: 1px solid #666;
-	
+	display:inline-block;
+    white-space: normal;
 }
 
 #divSearch {
